[gd_scene load_steps=9 format=3 uid="uid://mm6uobet65dc"]

[ext_resource type="Script" path="res://main/Main.gd" id="2"]
[ext_resource type="Material" uid="uid://dusbgjjj3st3h" path="res://main/components/shaders/GB_Material.tres" id="2_ad7fh"]
[ext_resource type="Texture2D" uid="uid://17te8mp71vgb" path="res://sprites/story-images.png" id="3_b1g3t"]
[ext_resource type="Texture2D" uid="uid://e8jmtjuhtntl" path="res://sprites/logo_blurred.png" id="4_fli6t"]
[ext_resource type="Script" path="res://main/start_screen/MainMenu.gd" id="5_mbp4b"]
[ext_resource type="Theme" uid="uid://blj6w81baf3sg" path="res://main/default_theme.tres" id="6_6iknv"]

[sub_resource type="Shader" id="Shader_y1ko5"]
code = "shader_type canvas_item;

uniform vec4 lightest: source_color = vec4(0.961, 0.980, 0.937, 1.0);
uniform vec4 light: source_color = vec4(0.549, 0.749, 0.039, 1.0);
uniform vec4 dark: source_color = vec4(0.18, 0.451, 0.125, 1.0);
uniform vec4 darkest: source_color = vec4(0.0, 0.247, 0.0, 1.0);
uniform float lightestThreshold = 0.1;
uniform float lightThreshold = 0.3;
uniform float darkThreshold = 0.6;

void fragment(){
	COLOR = texture(TEXTURE, UV);
	
	float rgb_avg = (COLOR.r + COLOR.g + COLOR.b) / 3.0;
	if (rgb_avg < lightestThreshold) {
		COLOR = vec4(darkest.x, darkest.y, darkest.z, COLOR.a);
	} else if (rgb_avg < lightThreshold) {
		COLOR = vec4(dark.x, dark.y, dark.z, COLOR.a);
	} else if (rgb_avg < darkThreshold) {
		COLOR = vec4(light.x, light.y, light.z, COLOR.a);
	} else {
		COLOR = vec4(lightest.x, lightest.y, lightest.z, 0);
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tw2dj"]
shader = SubResource("Shader_y1ko5")
shader_parameter/lightest = Color(0.960784, 0.980392, 0.937255, 1)
shader_parameter/light = Color(0.952941, 0.65098, 0.745098, 1)
shader_parameter/dark = Color(0.709804, 0.164706, 0.454902, 1)
shader_parameter/darkest = Color(0.129412, 0, 0.0627451, 1)
shader_parameter/lightestThreshold = 0.35
shader_parameter/lightThreshold = 0.61
shader_parameter/darkThreshold = 0.57

[node name="MainScene" type="Node2D"]
script = ExtResource("2")

[node name="MainMenuCanvas" type="CanvasLayer" parent="."]
layer = 0
offset = Vector2(2.08165e-12, 2.08165e-12)
transform = Transform2D(1, 0, 0, 1, 2.08165e-12, 2.08165e-12)

[node name="ColorRect" type="ColorRect" parent="MainMenuCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -148.0
offset_right = 200.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 1)

[node name="Vulcano" type="TextureRect" parent="MainMenuCanvas"]
material = ExtResource("2_ad7fh")
clip_contents = true
custom_minimum_size = Vector2(128, 128)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0002
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_b1g3t")
expand_mode = 1
stretch_mode = 3

[node name="Logo" type="TextureRect" parent="MainMenuCanvas"]
material = SubResource("ShaderMaterial_tw2dj")
clip_contents = true
custom_minimum_size = Vector2(128, 128)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -3.0
offset_right = 64.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fli6t")
expand_mode = 1
stretch_mode = 3

[node name="MainMenu" type="Control" parent="MainMenuCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_mbp4b")

[node name="MarginContainer" type="MarginContainer" parent="MainMenuCanvas/MainMenu"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 106.0
offset_bottom = 115.0

[node name="HomeMenu" type="VBoxContainer" parent="MainMenuCanvas/MainMenu/MarginContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MainMenuCanvas/MainMenu/MarginContainer/HomeMenu"]
light_mask = 512
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_6iknv")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "NEW GAME
"
flat = true

[node name="LoadButton" type="Button" parent="MainMenuCanvas/MainMenu/MarginContainer/HomeMenu"]
light_mask = 512
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_6iknv")
theme_override_font_sizes/font_size = 16
disabled = true
button_mask = 0
text = "LOAD GAME"
flat = true

[node name="QuitButton" type="Button" parent="MainMenuCanvas/MainMenu/MarginContainer/HomeMenu"]
light_mask = 512
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_6iknv")
theme_override_font_sizes/font_size = 16
button_mask = 0
text = "QUIT GAME"
flat = true

[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/HomeMenu/NewGameButton" to="MainMenuCanvas/MainMenu" method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/HomeMenu/LoadButton" to="MainMenuCanvas/MainMenu" method="_on_load_game_pressed"]
[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/HomeMenu/QuitButton" to="MainMenuCanvas/MainMenu" method="_on_quit_game_pressed"]
